--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <router-link to="/">Home</router-link>
-  <router-link to="/store">Store</router-link>
+  <router-link to="/store">Stores</router-link>
   <div id="content">
   </div>
   <script src="/main.js" type="module"></script>
