fix router link

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <router-link to="/">Home</router-link>
-  <router-link to="/store">Stores</router-link>
+  <a is="router-link" href="/">Home</a>
+  <a is="router-link" href="/store">Stores</a>
   <div id="content">
   </div>
   <script src="/main.js" type="module"></script>
